--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [features]
 default = []
 objects-pool = []
+base64 = ["dep:base64"]
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
 chrono = "*"
 async-trait = "*"
 signal-hook = "*"
+base64 = { version = "*", optional = true }
