added serialize/deserialize on datetime as microseconds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ chrono = "*"
 async-trait = "*"
 signal-hook = "*"
 base64 = { version = "*", optional = true }
+serde = {version = "*", features = ["derive"]}
