--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,8 @@ chrono = "*"
 async-trait = "*"
 signal-hook = "*"
 base64 = { version = "*", optional = true }
-serde = {version = "*", features = ["derive"]}
+serde = { version = "*", features = ["derive"] }
+
+
+[dev-dependencies]
+serde_json = "*"
