Added hex support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 default = []
 objects-pool = []
 base64 = ["dep:base64"]
+hex = ["dep:hex"]
 with-tokio = ["tokio", "signal-hook"]
 
 [dependencies]
@@ -18,7 +19,7 @@ async-trait = "*"
 signal-hook = { version = "*", optional = true }
 base64 = { version = "*", optional = true }
 serde = { version = "*", features = ["derive"] }
-
+hex = { version = "*", optional = true }
 
 [dev-dependencies]
 serde_json = "*"
