--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ objects-pool = []
 base64 = ["dep:base64"]
 hex = ["dep:hex"]
 with-tokio = ["tokio", "signal-hook"]
+vec-maybe-stack = []
 
 [dependencies]
 tokio = { version = "*", features = ["full"], optional = true }
