--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,10 @@ hex = { version = "*", optional = true }
 
 [dev-dependencies]
 serde_json = "*"
+criterion = "*"
+uuid = {version = "*", features = ["v4"]}
+
+[[bench]]
+name = "sorted_vec_vs_hashmap"
+harness = false
+
